# Simple-Game-C

./: CMakeLists.txt  README.md
src/: animals.h  campingItems.cpp  campingItems.h  config.cpp  config.h  consumables.cpp  consumables.h  drink.cpp  drink.h  eat.cpp  eat.h  fish.h  fishing.cpp  fishing.h  forestAnimals.h  gameplay.cpp  gameplay.h  hunting.cpp  hunting.h  inputManager.h  lodge.cpp  lodge.h  main.cpp  map.cpp  map.h  screens.cpp  screens.h  sleep.cpp  sleep.h  tips.cpp  tips.h  travel.cpp  travel.h
